# call-center-ai

./: .gitignore  AGENTS.md  Q&A_pairs.xlsx  README.md  docker-compose.yml  pyproject.toml
.agent/rules/: call-center-ai.md
app/: local_chat_routes.py  main.py  streaming_routes.py  test_platform.py
app/helpers/: asr_client.py  asr_mock.py  audio_pipeline.py  features.py  guardrails.py  history_extractor.py  intent_classifier.py  langgraph_planner.py  llm_tools.py  llm_worker.py  local_chat.py  logging.py  monitoring.py  observability.py  persistent_asr.py  rag.py  slot_extractor.py  sop_engine.py  sop_gating.py  state_models.py  streaming_asr.py  streaming_tts.py  tts_client.py  tts_mock.py
app/helpers/config_models/: ai_search.py  asr.py  database.py  llm.py  prompts.py  queue.py  resources.py  root.py  tts.py
app/models/: message.py
app/persistence/: memory_queue.py  mock_search.py  mongodb.py  redis.py
app/resources/: knowledge_base.json  metadata.pkl  sop_schema.yaml
cicd/: Dockerfile.dev
docs/: ALIYUN_QUICKSTART.md  PROJECT_STRUCTURE.md  PROJECT_WALKTHROUGH.md
scripts/: analyze_traces.py  build_vector_index.py  delete_calls.py  dev-start.sh  ingest_qa_data.py  replay_trace.py  test_asr_ws.py  test_llm.py  test_mongodb.py  test_redis.py  test_tts.py
